# q_ls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: _fuzz.yml  ci.yml  docs.yml  fuzz.yml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/fuzz/: Cargo.toml
crates/parser/fuzz/fuzz_targets/: parse.rs
crates/parser/src/: event.rs  lib.rs  parser.rs  sink.rs  syntax_kind.rs
crates/parser/src/grammar/: expressions.rs  keywords.rs  mod.rs  qsql.rs
crates/parser/tests/: corpus.rs  integration.rs
crates/parser/tests/data/corpus/: assignment____assign__8.q  assignment__assignment_passthrough__1.q  assignment__assignment_through_parameter__2.q  assignment__function_lambda_global_ammend__6.q  comments__Almost_multiline_comment__12.q  comments__Comment_block_in_comment_blockception__7.q  comments__Multiline_comment_that_EOF__4.q  comments__String_fragment_with_comment__13.q  comments__Terminal_comment_block__5.q  comments__comment_block_after_semicolon__14.q  comments__comment_block_at_the_start__9.q  (+195 more)
crates/server/: Cargo.toml
crates/server/src/: backend.rs  builtins.rs  completion.rs  diagnostics.rs  document.rs  goto_def.rs  hover.rs  line_index.rs  main.rs  references.rs  rename.rs  semantic.rs  sym_table.rs  symbols.rs  workspace_index.rs
docs/superpowers/plans/: 2026-05-02-q-language-server.md  2026-05-05-tree-sitter-q-compat.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/src/: extension.ts
scripts/: extract_corpus.sh
test_data/: aoc.q  errors.q
(+3 files in other folders)
